Update meta tag stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,37 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>char.count</title>
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="char.count" />
+    <meta name="description" content="count characters for your dang txt" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="charcount.alexmuen.ch" />
+    <meta property="og:title" content="char.count" />
+    <meta
+      property="og:description"
+      content="count characters for your dang txt"
+    />
+    <meta
+      property="og:image"
+      content="/public/meta.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="charcount.alexmuen.ch" />
+    <meta property="twitter:title" content="char.count" />
+    <meta
+      property="twitter:description"
+      content="count characters for your dang txt"
+    />
+    <meta
+      property="twitter:image"
+      content="/public/meta.png"
+    />
   </head>
   <body class="w-full h-full bg-sky-950 p-4">
     <div
