--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <meta
       property="og:image"
-      content="/public/meta.png"
+      content="https://charcount.alexmuen.ch/meta.png"
     />
 
     <!-- Twitter -->
